@@ -34,6 +34,7 @@ object NativePackagerJavaAppDockerfile {
     "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED " +
     "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED " +
     "--add-opens=java.base/sun.security.action=ALL-UNNAMED " +
+    "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED " +
     "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED " +
     "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED " +
     "-Dio.netty.tryReflectionSetAccessible=true"
